--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,19 +1,10 @@
 ﻿@inherits LayoutComponentBase
-
-<PageTitle>BlazorApp1</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
+<div>
+    <HeaderBar />
+    <div class="section columns">
         <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+        <main class="column">
             @Body
-        </article>
-    </main>
+        </main>
+    </div>
 </div>
